Publishing new work

--- a/working/ToDo.txt
+++ b/working/ToDo.txt
@@ -19,14 +19,14 @@ ToDo List libft :
   ok= toupper
   ok= strlen
   ok= strncmp
-  • strchr
-  • strnstr
-  • strlcpy
+  ok+ strchr
+  ok+ strnstr
+  ??+ strlcpy
   • strlcat
   • strrchr
-  • bzero
-  • memset
-  • memchr
+  OK+ bzero
+  ok+ memset
+  ok +memchr
   • memcpy
   • memcmp
   • memmove
@@ -43,6 +43,7 @@ ToDo List libft :
   • ft_putchar_fd
   • ft_putstr_fd
   • ft_putendl_fr
+  • ft_putnbr_fd
 - 3- bonus part
      libft.h
 typedef struct s_list
