Libft - adding new work { + _fd functions } / tested OK: 11

--- a/working/ToDo.txt
+++ b/working/ToDo.txt
@@ -37,16 +37,16 @@ _________________________
 - 2- additional functions
 =========================
   ok+ ft_substr
-  • ft_strjoin
-  • ft_strtrim
-  • ft_split
-  • ft_itoa
+  ok+ ft_strjoin
+  ok+ ft_strtrim
+  ok+ ft_split
+  ok+ ft_itoa
   • ft_strmapi
   • ft_striteri
   • ft_putchar_fd
-  • ft_putstr_fd
-  • ft_putendl_fr
-  • ft_putnbr_fd
+  ??+ ft_putstr_fd
+  ??+ ft_putendl_fd
+  ??+ ft_putnbr_fd
 _________________________
 - 3- bonus part
 =========================
@@ -59,14 +59,13 @@ typedef struct s_list
 _________________________
 - 4- bonus functions
 =========================
-  • ft_lstnew
-  • ft_lstadd_front
-  • ft_lstsize
-  • ft_lstlast
-  • ft_lstsadd_back
-  • ft_lstdelone
-  • ft_lstclear
-  • ft_lstiter
-  • ft_lstmap
-  • ft_lstclear
+  ok+ ft_lstnew
+  ok+ ft_lstadd_front
+  ok+ ft_lstsize
+  ok+ ft_lstlast
+  ok+ ft_lstsadd_back
+  ok+ ft_lstdelone
+  ok+ ft_lstclear
+  ok+ ft_lstiter
+  ok+ ft_lstmap
   
